--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,18 @@
 {
   "version": 2,
-  "buildCommand": "cd frontend && pnpm run build",
-  "outputDirectory": "frontend/.next",
-  "installCommand": "pnpm install",
-  "framework": "nextjs"
+  "builds": [
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/next",
+      "config": {
+        "distDir": ".next"
+      }
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "frontend/$1"
+    }
+  ]
 }
