Simplify telemetry-daily route and add various API endpoints and features

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,18 @@
       "src": "/(.*)",
       "dest": "frontend/$1"
     }
+  ],
+  "redirects": [
+    {
+      "source": "/(.*)",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.verisplatform.com"
+        }
+      ],
+      "destination": "https://verisplatform.com/$1",
+      "permanent": true
+    }
   ]
 }
