--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,24 +6,41 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "test": "jest --testPathPattern=__tests__ --passWithNoTests",
+    "test:watch": "jest --watch --testPathPattern=__tests__",
+    "test:ci": "jest --testPathPattern=__tests__ --ci --coverage --watchAll=false"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
+    "@types/qrcode": "^1.5.5",
     "next": "15.5.6",
+    "pdfkit": "^0.17.2",
+    "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hot-toast": "^2.6.0"
+    "react-hot-toast": "^2.6.0",
+    "stripe": "^19.1.0",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.12"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@jest/globals": "^29.7.0",
     "@tailwindcss/postcss": "^4",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
+    "@types/pdfkit": "^0.17.3",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^11.0.0",
     "eslint": "^9",
     "eslint-config-next": "15.5.6",
+    "jest": "^29.7.0",
+    "jest-junit": "^16.0.0",
+    "node-mocks-http": "^1.17.2",
     "tailwindcss": "^4",
+    "ts-jest": "^29.1.2",
     "typescript": "^5"
   }
 }
