--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,7 +15,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i --frozen-lockfile
+      - run: pnpm i --frozen-lockfile --include=dev
       - run: pnpm -C frontend lint
     outputs:
       cache-hit: ${{ steps.cache.outputs.cache-hit }}
@@ -32,7 +32,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i --frozen-lockfile
+      - run: pnpm i --frozen-lockfile --include=dev
       - run: pnpm -C frontend exec tsc --noEmit
 
   build:
@@ -48,7 +48,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i --frozen-lockfile
+      - run: pnpm i --frozen-lockfile --include=dev
       - run: pnpm -C frontend build
 
   test:
@@ -64,7 +64,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i --frozen-lockfile
+      - run: pnpm i --frozen-lockfile --include=dev
       - run: pnpm -C frontend build
       - name: Run API tests
         run: |
@@ -106,7 +106,7 @@ jobs:
           key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
           restore-keys: |
             ${{ runner.os }}-pnpm-store-
-      - run: pnpm i --frozen-lockfile
+      - run: pnpm i --frozen-lockfile --include=dev
       - name: Deploy to Vercel
         uses: vercel/action@v1
         with:
