--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,69 +2,20 @@ name: ci
 on: [push, pull_request]
 
 jobs:
-  lint:
+  ci:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - name: Cache pnpm store
-        uses: actions/cache@v4
-        id: cache
+      - uses: actions/setup-node@v4
         with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          node-version: 20
+          cache: pnpm
+      - run: corepack enable
+      - uses: pnpm/action-setup@v4        # NOTE: no "version" here
+      - run: pnpm -v
       - run: pnpm -C frontend install --frozen-lockfile
       - run: pnpm -C frontend lint
-    outputs:
-      cache-hit: ${{ steps.cache.outputs.cache-hit }}
-
-  typecheck:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - name: Cache pnpm store
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-      - run: pnpm -C frontend install --frozen-lockfile
       - run: pnpm -C frontend exec tsc --noEmit
-
-  build:
-    runs-on: ubuntu-latest
-    needs: [lint, typecheck]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - name: Cache pnpm store
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-      - run: pnpm -C frontend install --frozen-lockfile
-      - run: pnpm -C frontend build
-
-  test:
-    runs-on: ubuntu-latest
-    needs: [lint, typecheck]
-    steps:
-      - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - name: Cache pnpm store
-        uses: actions/cache@v4
-        with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-      - run: pnpm -C frontend install --frozen-lockfile
       - run: pnpm -C frontend build
       - name: Run API tests
         run: |
@@ -94,18 +45,16 @@ jobs:
 
   vercel-preview:
     runs-on: ubuntu-latest
-    needs: [build]
+    needs: [ci]
     if: github.event_name == 'pull_request'
     steps:
       - uses: actions/checkout@v4
-      - uses: pnpm/action-setup@v4
-      - name: Cache pnpm store
-        uses: actions/cache@v4
+      - uses: actions/setup-node@v4
         with:
-          path: ~/.pnpm-store
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
+          node-version: 20
+          cache: pnpm
+      - run: corepack enable
+      - uses: pnpm/action-setup@v4        # NOTE: no "version" here
       - run: pnpm -C frontend install --frozen-lockfile
       - name: Deploy to Vercel
         uses: vercel/action@v1
