Fix Supabase lazy initialization and add CI env checks
- Make all Supabase clients lazy-initialized to prevent build-time errors
- Add environment variable validation step to CI workflow
- Update CRON endpoint to actually run telemetry aggregation
- Fix all API routes to use function-based Supabase clients

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,6 +16,10 @@ jobs:
       - uses: pnpm/action-setup@v4 # NOTE: no "version" here
       - run: pnpm -v
       - run: pnpm -C frontend install --frozen-lockfile
+      - name: Check env present
+        run: |
+          [ -n "$NEXT_PUBLIC_SUPABASE_URL" ] || (echo "MISSING URL" && exit 1)
+          [ -n "$NEXT_PUBLIC_SUPABASE_ANON_KEY" ] || (echo "MISSING ANON" && exit 1)
       - run: pnpm -C frontend lint
       - run: pnpm -C frontend exec tsc --noEmit
       - run: pnpm -C frontend build
