--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,14 +7,14 @@ jobs:
     env:
       NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-      NEXT_PUBLIC_PRO_MONTHLY_PRICE_ID: 'price_test_pro_monthly'
-      NEXT_PUBLIC_TEAM_MONTHLY_PRICE_ID: 'price_test_team_monthly'
-      CRON_JOB_TOKEN: '89ca7e174af2cf99708f6a29a76e2cabbb76cf8019a18724da0115ed0d7c17f6'
-      CRON_SECRET: 'test_cron_secret'
-      VERIS_SIGNING_PRIVATE_KEY: 'test_private_key'
-      VERIS_SIGNING_PUBLIC_KEY: 'test_public_key'
-      STRIPE_SECRET_KEY: 'sk_test_fake_key_for_ci'
-      STRIPE_WEBHOOK_SECRET: 'whsec_test_fake_secret_for_ci'
+      NEXT_PUBLIC_PRO_MONTHLY_PRICE_ID: ${{ secrets.NEXT_PUBLIC_PRO_MONTHLY_PRICE_ID }}
+      NEXT_PUBLIC_TEAM_MONTHLY_PRICE_ID: ${{ secrets.NEXT_PUBLIC_TEAM_MONTHLY_PRICE_ID }}
+      CRON_JOB_TOKEN: ${{ secrets.CRON_JOB_TOKEN }}
+      CRON_SECRET: ${{ secrets.CRON_SECRET }}
+      VERIS_SIGNING_PRIVATE_KEY: ${{ secrets.VERIS_SIGNING_PRIVATE_KEY }}
+      VERIS_SIGNING_PUBLIC_KEY: ${{ secrets.VERIS_SIGNING_PUBLIC_KEY }}
+      STRIPE_SECRET_KEY: ${{ secrets.STRIPE_SECRET_KEY }}
+      STRIPE_WEBHOOK_SECRET: ${{ secrets.STRIPE_WEBHOOK_SECRET }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
@@ -64,12 +64,12 @@ jobs:
     env:
       NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
       NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
-      NEXT_PUBLIC_PRO_MONTHLY_PRICE_ID: 'price_test_pro_monthly'
-      NEXT_PUBLIC_TEAM_MONTHLY_PRICE_ID: 'price_test_team_monthly'
-      CRON_JOB_TOKEN: '89ca7e174af2cf99708f6a29a76e2cabbb76cf8019a18724da0115ed0d7c17f6'
-      CRON_SECRET: 'test_cron_secret'
-      VERIS_SIGNING_PRIVATE_KEY: 'test_private_key'
-      VERIS_SIGNING_PUBLIC_KEY: 'test_public_key'
+      NEXT_PUBLIC_PRO_MONTHLY_PRICE_ID: ${{ secrets.NEXT_PUBLIC_PRO_MONTHLY_PRICE_ID }}
+      NEXT_PUBLIC_TEAM_MONTHLY_PRICE_ID: ${{ secrets.NEXT_PUBLIC_TEAM_MONTHLY_PRICE_ID }}
+      CRON_JOB_TOKEN: ${{ secrets.CRON_JOB_TOKEN }}
+      CRON_SECRET: ${{ secrets.CRON_SECRET }}
+      VERIS_SIGNING_PRIVATE_KEY: ${{ secrets.VERIS_SIGNING_PRIVATE_KEY }}
+      VERIS_SIGNING_PUBLIC_KEY: ${{ secrets.VERIS_SIGNING_PUBLIC_KEY }}
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
