--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
     "@types/qrcode": "^1.5.5",
+    "ioredis": "^5.8.2",
     "next": "15.5.6",
     "pdfkit": "^0.17.2",
     "qrcode": "^1.5.4",
