--- a/.prettierrc
+++ b/.prettierrc
@@ -1,1 +1,6 @@
-{ "singleQuote": true, "semi": true, "trailingComma": "all" }
+{
+  "singleQuote": false,
+  "semi": true,
+  "trailingComma": "all",
+  "printWidth": 100
+}
