--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,27 +2,39 @@ name: CI
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test:
     runs-on: ubuntu-latest
-    
+
     steps:
-    - uses: actions/checkout@v4
-    
-    - uses: actions/setup-node@v4
-      with:
-        node-version: 20
-        cache: 'pnpm'
+      - uses: actions/checkout@v4
 
-    - uses: pnpm/action-setup@v4
-      with:
-        version: 10.18.1
-        run_install: false
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+          cache: "pnpm"
 
-    - run: corepack enable
+      - uses: pnpm/action-setup@v4
+        with:
+          version: 10.18.1
+          run_install: false
 
-    - run: pnpm -C frontend install --frozen-lockfile
+      - run: corepack enable
+
+      - run: pnpm -C frontend install --frozen-lockfile
+
+      - run: pnpm -C frontend build
+
+      - run: pnpm -C frontend start &
+        env:
+          NODE_ENV: test
+
+      - run: sleep 10
+
+      - run: ./scripts/ci-smoke.sh
+        env:
+          SMOKE_BASE_URL: http://localhost:3000
