--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
     "@types/qrcode": "^1.5.5",
+    "@upstash/ratelimit": "^2.0.6",
+    "@upstash/redis": "^1.35.6",
     "ioredis": "^5.8.2",
     "next": "15.5.6",
     "pdfkit": "^0.17.2",
