--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
     "stripe": "^19.1.0",
+    "ulidx": "^2.4.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
   },
