--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "ioredis": "^5.8.2",
     "next": "15.5.6",
     "pdfkit": "^0.17.2",
+    "pino": "^10.1.0",
     "qrcode": "^1.5.4",
     "react": "19.1.0",
     "react-dom": "19.1.0",
