--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,11 @@
     "lint": "eslint",
     "test": "jest --testPathPattern=__tests__ --passWithNoTests",
     "test:watch": "jest --watch --testPathPattern=__tests__",
-    "test:ci": "jest --testPathPattern=__tests__ --ci --coverage --watchAll=false"
+    "test:ci": "jest --testPathPattern=__tests__ --ci --coverage --watchAll=false",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
@@ -32,6 +36,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@jest/globals": "^29.7.0",
+    "@playwright/test": "^1.56.1",
     "@tailwindcss/postcss": "^4",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
