--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,8 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
-    "seed:stripe": "tsx ../scripts/seed.stripe.ts"
+    "seed:stripe": "tsx ../scripts/seed.stripe.ts",
+    "release": "tsx ../scripts/release.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.76.0",
