fix: add missing dependencies to frontend package.json

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,11 +18,19 @@
     "release": "tsx ../scripts/release.ts"
   },
   "dependencies": {
+    "@apidevtools/swagger-parser": "^12.1.0",
+    "@aws-sdk/client-s3": "^3.916.0",
+    "@aws-sdk/s3-request-presigner": "^3.916.0",
     "@supabase/supabase-js": "^2.76.0",
     "@types/qrcode": "^1.5.5",
     "@upstash/ratelimit": "^2.0.6",
     "@upstash/redis": "^1.35.6",
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
+    "arweave": "^1.15.7",
+    "canonical-json": "^0.2.0",
     "ioredis": "^5.8.2",
+    "merkle-tree-stream": "^4.0.0",
     "next": "15.5.6",
     "pdfkit": "^0.17.2",
     "pino": "^10.1.0",
@@ -30,7 +38,10 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.6.0",
+    "redoc": "^2.5.2",
+    "redoc-cli": "^0.13.21",
     "stripe": "^19.1.0",
+    "swagger-jsdoc": "^6.2.8",
     "ulidx": "^2.4.1",
     "uuid": "^13.0.0",
     "zod": "^4.1.12"
