--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@apidevtools/swagger-parser": "^12.1.0",
     "@aws-sdk/client-s3": "^3.916.0",
     "@aws-sdk/s3-request-presigner": "^3.916.0",
+    "@sentry/nextjs": "^10.21.0",
     "@supabase/supabase-js": "^2.76.0",
     "@types/qrcode": "^1.5.5",
     "@upstash/ratelimit": "^2.0.6",
