fix: replace redoc with simple documentation page to avoid yaml package issues
- Remove redoc and redoc-cli dependencies that were causing yaml package conflicts
- Replace dynamic redoc loading with a simple static documentation page
- Remove transpilePackages configuration that's no longer needed
- This resolves the webpack compilation error with yaml package ES modules

--- a/.github/workflows/retention.yml
+++ b/.github/workflows/retention.yml
@@ -5,12 +5,16 @@ jobs:
   purge:
     runs-on: ubuntu-latest
     steps:
+      - name: Install Supabase CLI
+        uses: supabase/setup-cli@v1
+        with:
+          version: latest
+
       - name: Purge old proofs
         env:
           NEXT_PUBLIC_SUPABASE_URL: ${{ secrets.NEXT_PUBLIC_SUPABASE_URL }}
           supabaseservicekey: ${{ secrets.supabaseservicekey }}
         run: |
-          npm i -g supabase
           node -e "
           const { createClient } = require('@supabase/supabase-js');
           const c = createClient(process.env.NEXT_PUBLIC_SUPABASE_URL, process.env.supabaseservicekey);
