--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -25,13 +25,13 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Type check frontend
-        run: cd frontend && pnpm run typecheck
+        run: cd frontend && npx tsc --noEmit
 
       - name: Type check SDK
         run: cd packages/sdk-js && pnpm run build
@@ -51,7 +51,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -60,7 +60,7 @@ jobs:
         run: cd frontend && pnpm run lint
 
       - name: Lint SDK
-        run: cd packages/sdk-js && pnpm run lint
+        run: cd packages/sdk-js && npx eslint src --ext .ts
 
   unit-tests:
     name: Unit Tests
@@ -77,7 +77,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -110,7 +110,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -144,13 +144,13 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
       - name: Run contract tests
-        run: cd frontend && pnpm run test -- --testPathPattern="contract|conformance"
+        run: cd frontend && pnpm run test -- --testPathPattern="conformance"
 
   phase1-gates:
     name: Phase-1 Quality Gates
@@ -168,7 +168,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -198,7 +198,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -229,7 +229,7 @@ jobs:
       - name: Setup pnpm
         uses: pnpm/action-setup@v4
         with:
-          version: 8
+          version: 10.18.1
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
