--- a/frontend/tsconfig.build.json
+++ b/frontend/tsconfig.build.json
@@ -6,12 +6,7 @@
     "strict": true,
     "exactOptionalPropertyTypes": false
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.tsx",
-    "src/types/**/*.ts",
-    "src/types/**/*.d.ts"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/types/**/*.ts", "src/types/**/*.d.ts"],
   "exclude": [
     "node_modules",
     "**/*.test.ts",
