Fix GitHub workflows and CI/CD pipeline
- Fixed main CI workflow to use correct pnpm commands and workspace structure
- Updated all workflows to use pnpm version 10.18.1 consistently
- Fixed environment variable names (SUPABASE_SERVICE_KEY -> supabaseservicekey)
- Updated signing key format to include proper PEM headers
- Fixed workflow dependencies and job ordering
- Updated Vercel deployment configuration
- Fixed pnpm cache setup and dependency installation
- Standardized Node.js version to 20 across all workflows
- Fixed test environment variables and build configurations
- Updated security scanning and monitoring workflows
- All workflows now properly handle the monorepo structure with pnpm workspaces

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -63,7 +63,7 @@ jobs:
     name: Full CI Pipeline
     runs-on: ubuntu-latest
     if: github.ref == 'refs/heads/main' || github.ref == 'refs/heads/develop' || github.event.inputs.pipeline_type == 'full'
-    needs: quick-validation
+    needs: [quick-validation]
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -99,9 +99,9 @@ jobs:
           CRON_JOB_TOKEN: test-cron-token
           STRIPE_SECRET_KEY: sk_test_placeholder
           STRIPE_WEBHOOK_SECRET: whsec_placeholder
-          SUPABASE_SERVICE_KEY: test-service-key
-          VERIS_SIGNING_PRIVATE_KEY: test-private-key
-          VERIS_SIGNING_PUBLIC_KEY: test-public-key
+          supabaseservicekey: test-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----\ntest-private-key\n-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----\ntest-public-key\n-----END PUBLIC KEY-----
 
       - name: Build application
         run: pnpm --filter frontend run build
@@ -167,9 +167,9 @@ jobs:
           CRON_JOB_TOKEN: test-cron-token
           STRIPE_SECRET_KEY: sk_test_placeholder
           STRIPE_WEBHOOK_SECRET: whsec_placeholder
-          SUPABASE_SERVICE_KEY: test-service-key
-          VERIS_SIGNING_PRIVATE_KEY: test-private-key
-          VERIS_SIGNING_PUBLIC_KEY: test-public-key
+          supabaseservicekey: test-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----\ntest-private-key\n-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----\ntest-public-key\n-----END PUBLIC KEY-----
 
       - name: Run E2E tests
         run: pnpm --filter frontend run test:e2e
