--- a/.github/workflows/integrity.yml
+++ b/.github/workflows/integrity.yml
@@ -14,12 +14,14 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-          cache: 'npm'
+
+      - name: Setup pnpm
+        uses: pnpm/action-setup@v4
+        with:
+          version: '10.18.1'
 
       - name: Install dependencies
-        run: |
-          cd frontend
-          npm install
+        run: pnpm install --frozen-lockfile
 
       - name: Run Integrity Audit
         env:
