--- a/.github/workflows/quality.yml
+++ b/.github/workflows/quality.yml
@@ -91,9 +91,9 @@ jobs:
           CRON_JOB_TOKEN: placeholder-cron-token
           STRIPE_SECRET_KEY: sk_test_placeholder
           STRIPE_WEBHOOK_SECRET: whsec_placeholder
-          SUPABASE_SERVICE_KEY: placeholder-service-key
-          VERIS_SIGNING_PRIVATE_KEY: placeholder-private-key
-          VERIS_SIGNING_PUBLIC_KEY: placeholder-public-key
+          supabaseservicekey: placeholder-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----\nplaceholder-private-key\n-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----\nplaceholder-public-key\n-----END PUBLIC KEY-----
 
       - name: Run SDK tests
         run: cd packages/sdk-js && pnpm run test
@@ -260,9 +260,9 @@ jobs:
           CRON_JOB_TOKEN: placeholder-cron-token
           STRIPE_SECRET_KEY: sk_test_placeholder
           STRIPE_WEBHOOK_SECRET: whsec_placeholder
-          SUPABASE_SERVICE_KEY: placeholder-service-key
-          VERIS_SIGNING_PRIVATE_KEY: placeholder-private-key
-          VERIS_SIGNING_PUBLIC_KEY: placeholder-public-key
+          supabaseservicekey: placeholder-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----\nplaceholder-private-key\n-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----\nplaceholder-public-key\n-----END PUBLIC KEY-----
 
       - name: Build SDK
         run: cd packages/sdk-js && pnpm run build
