--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,9 +99,9 @@ jobs:
           CRON_JOB_TOKEN: test-cron-token
           STRIPE_SECRET_KEY: sk_test_placeholder
           STRIPE_WEBHOOK_SECRET: whsec_placeholder
-          SUPABASE_SERVICE_KEY: test-service-key
-          VERIS_SIGNING_PRIVATE_KEY: test-private-key
-          VERIS_SIGNING_PUBLIC_KEY: test-public-key
+          supabaseservicekey: test-service-key
+          VERIS_SIGNING_PRIVATE_KEY: -----BEGIN PRIVATE KEY-----\ntest-private-key\n-----END PRIVATE KEY-----
+          VERIS_SIGNING_PUBLIC_KEY: -----BEGIN PUBLIC KEY-----\ntest-public-key\n-----END PUBLIC KEY-----
 
       - name: Build application
         run: pnpm --filter frontend run build
