--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -33,5 +33,5 @@
     "src/types/**/*.ts",
     "src/types/**/*.d.ts"
   ],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "src/__tests__/disabled"]
 }
